tests/neg/objects/update-02.ts

/*@ foo :: ({x: number}) => { void | true } */ 
function foo(o) {
  o.y = 10;
}
